# analyze-korean-stocks

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: weekly-report.yml
docs/: API_SETUP.md  SPEC.md
src/stock_analyzer/: __init__.py  config.py  main.py
src/stock_analyzer/analyzers/: __init__.py  ai_analyzer.py  stock_analyzer.py
src/stock_analyzer/collectors/: __init__.py  dart.py  news.py  stock_price.py
src/stock_analyzer/indicators/: __init__.py  technical.py
src/stock_analyzer/models/: __init__.py  schemas.py
src/stock_analyzer/notifiers/: __init__.py  github_uploader.py  kakao.py  uploader.py
src/stock_analyzer/reports/: __init__.py  generator.py
src/stock_analyzer/reports/templates/: report.html
tests/: conftest.py  test_analyzers.py  test_collectors.py  test_indicators.py  test_reports.py
